WFLY-3854 jdk9 testsuite work